responsividade-sombra-hidden

--- a/price-grid/index.html
+++ b/price-grid/index.html
@@ -5,125 +5,162 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-mobile.css">
     <title>Price Grid</title>
 </head>
 <body>
     <header></header>
 
     <div class="container">
-        <div class="container_caixa_top1">Pricing Table</div>
-        <div class="container_caixa_top2">
-            <div class="bandeira">STANDARD</div>
-            <div class="preco">
-                <div class="valor">$20</div>
-                <div class="valor_description">The standard chunk</div>
-            </div>
-        </div>
-        <div class="container_caixa_top3">
-            <div class="bandeira">PROFESSIONAL</div>
-            <div class="preco">
-                <div class="valor">$50</div>
-                <div class="valor_description">Various versions have evolved</div>
-            </div>
-        </div>
-        <div class="container_caixa_top4">
-            <div class="bandeira">EXTENDED</div>
-            <div class="preco">
-                <div class="valor">$100</div>
-                <div class="valor_description">Contrary to popular belief</div>
-            </div>
-        </div>
-
-        <div class="container_caixa_bottom1">
-            <div class="description">
-                <div class="bola">01</div>
-                <div class="text">
-                    LOREM IPSUM DOLOR SIT AMET</div>
-            </div>
-            <div class="description">
+        <div class="table">
+            <div class="container_caixa_top1">Pricing Table</div>
+            <div class="container_caixa_bottom1">
                 <div class="description">
-                    <div class="bola">02</div>
-                    <div class="text">
-                        CONSECTETUR ADIPISCING ELIT</div>
-                </div>
-            </div>
-            <div class="description">
-                <div class="description">
-                    <div class="bola">03</div>
-                    <div class="text">
-                        SEM DONEC VARIUS CLASS</div>
-                </div>
-            </div>
-            <div class="description">
-                <div class="description">
-                    <div class="bola">04</div>
+                    <div class="bola">01</div>
                     <div class="text">
                         LOREM IPSUM DOLOR SIT AMET</div>
                 </div>
-            </div>
-            <div class="description">
                 <div class="description">
-                    <div class="bola">05</div>
-                    <div class="text">
-                        FERMENTUM LITORA</div>
+                    <div class="description">
+                        <div class="bola">02</div>
+                        <div class="text">
+                            CONSECTETUR ADIPISCING ELIT</div>
+                    </div>
+                </div>
+                <div class="description">
+                    <div class="description">
+                        <div class="bola">03</div>
+                        <div class="text">
+                            SEM DONEC VARIUS CLASS</div>
+                    </div>
+                </div>
+                <div class="description">
+                    <div class="description">
+                        <div class="bola">04</div>
+                        <div class="text">
+                            LOREM IPSUM DOLOR SIT AMET</div>
+                    </div>
+                </div>
+                <div class="description">
+                    <div class="description">
+                        <div class="bola">05</div>
+                        <div class="text">
+                            FERMENTUM LITORA</div>
+                    </div>
+                </div>
+                <div class="description">
+                    <div class="description">
+                        <div class="bola">06</div>
+                        <div class="text">
+                            JUSTO NASCETUR URNA SAGITTIS</div>
+                    </div>
+                </div>
+                <div class="description">
+                    <div class="description">
+                        <div class="bola">07</div>
+                        <div class="text">
+                            DIGNISSIM VITAE, CONUBIA.</div>
+                    </div>
                 </div>
             </div>
-            <div class="description">
-                <div class="description">
-                    <div class="bola">06</div>
-                    <div class="text">
-                        JUSTO NASCETUR URNA SAGITTIS</div>
+        </div>
+
+        <div class="c-hidden">
+            <div class="sombra-l"></div>
+            <div class="content">
+                <div class="container_caixa_top2">
+                    <div class="bandeira">STANDARD</div>
+                    <div class="preco">
+                        <div class="valor">$20</div>
+                        <div class="valor_description">The standard chunk</div>
+                    </div>
+                </div>
+                <div class="container_caixa_top3">
+                    <div class="bandeira">PROFESSIONAL</div>
+                    <div class="preco">
+                        <div class="valor">$50</div>
+                        <div class="valor_description">Various versions have evolved</div>
+                    </div>
+                </div>
+                <div class="container_caixa_top4">
+                    <div class="bandeira">EXTENDED</div>
+                    <div class="preco">
+                        <div class="valor">$100</div>
+                        <div class="valor_description">Contrary to popular belief</div>
+                    </div>
+                </div>       <div class="container_caixa_top2">
+                    <div class="bandeira">STANDARD</div>
+                    <div class="preco">
+                        <div class="valor">$20</div>
+                        <div class="valor_description">The standard chunk</div>
+                    </div>
+                </div>
+                <div class="container_caixa_top3">
+                    <div class="bandeira">PROFESSIONAL</div>
+                    <div class="preco">
+                        <div class="valor">$50</div>
+                        <div class="valor_description">Various versions have evolved</div>
+                    </div>
+                </div>
+                <div class="container_caixa_top4">
+                    <div class="bandeira">EXTENDED</div>
+                    <div class="preco">
+                        <div class="valor">$100</div>
+                        <div class="valor_description">Contrary to popular belief</div>
+                    </div>
+                </div>
+                <div class="container_caixa_bottom2">
+                    <div class="price1">1 mês</div>
+                    <div class="price1-cor" style="color: rgb(97, 39, 179);">10GB</div>
+                    <div class="price1">
+                        <div class="bola-ok"></div></div>
+                    <div class="price1-cor">
+                        <div class="bola-ok"></div></div>
+                    <div class="price1" style="color: rgba(97, 39, 179, 0.363);">X</div>
+                    <div class="price1-cor" style="color: rgba(97, 39, 179, 0.363);">X</div>
+                    <div class="price1" style="color: rgba(97, 39, 179, 0.363);">X</div>
+                </div>
+                <div class="container_caixa_bottom3">
+                    <div class="price1">3 meses</div>
+                    <div class="price1-cor" style="color: rgb(32 143 228);">50GB</div>
+                    <div class="price1">
+                        <div class="bola-ok"></div></div>
+                    <div class="price1-cor">
+                        <div class="bola-ok"></div></div>
+                    <div class="price1">
+                        <div class="bola-ok"></div>
+                    </div>
+                    <div class="price1-cor" style="color: rgba(97, 39, 179, 0.363);">X</div>
+                    <div class="price1" style="color: rgba(97, 39, 179, 0.363);">X</div>
+                </div>
+                <div class="container_caixa_bottom4">
+                    <div class="price1">1 ano</div>
+                    <div class="price1-cor" style="color: rgb(239 85 97);">200gb</div>
+                    <div class="price1">
+                        <div class="bola-ok"></div></div>
+                    <div class="price1-cor">
+                        <div class="bola-ok"></div></div>
+                    <div class="price1">
+                        <div class="bola-ok"></div>
+                    </div>
+                    <div class="price1-cor">
+                        <div class="bola-ok"></div>
+                    </div>
+                    <div class="price1">
+                        <div class="bola-ok"></div>
+                    </div>
                 </div>
             </div>
-            <div class="description">
-                <div class="description">
-                    <div class="bola">07</div>
-                    <div class="text">
-                        DIGNISSIM VITAE. CONUBIA RUTRUM</div>
-                </div>
+                <div class="navigation">
+                <div class="btn1"></div>
+                <div class="btn2"></div>
+                <div class="btn3"></div>
             </div>
+
+            <div class="sombra-r"></div>
         </div>
-        <div class="container_caixa_bottom2">
-            <div class="price1">1 mês</div>
-            <div class="price1-cor" style="color: rgb(97, 39, 179);">10GB</div>
-            <div class="price1">
-                <div class="bola-ok"></div></div>
-            <div class="price1-cor">
-                <div class="bola-ok"></div></div>
-            <div class="price1" style="color: rgba(97, 39, 179, 0.363);">X</div>
-            <div class="price1-cor" style="color: rgba(97, 39, 179, 0.363);">X</div>
-            <div class="price1" style="color: rgba(97, 39, 179, 0.363);">X</div>
-        </div>
-        <div class="container_caixa_bottom3">
-            <div class="price1">3 meses</div>
-            <div class="price1-cor" style="color: rgb(32 143 228);">50GB</div>
-            <div class="price1">
-                <div class="bola-ok"></div></div>
-            <div class="price1-cor">
-                <div class="bola-ok"></div></div>
-            <div class="price1">
-                <div class="bola-ok"></div>
-            </div>
-            <div class="price1-cor" style="color: rgba(97, 39, 179, 0.363);">X</div>
-            <div class="price1" style="color: rgba(97, 39, 179, 0.363);">X</div>
-        </div>
-        <div class="container_caixa_bottom4">
-            <div class="price1">1 ano</div>
-            <div class="price1-cor" style="color: rgb(239 85 97);">200gb</div>
-            <div class="price1">
-                <div class="bola-ok"></div></div>
-            <div class="price1-cor">
-                <div class="bola-ok"></div></div>
-            <div class="price1">
-                <div class="bola-ok"></div>
-            </div>
-            <div class="price1-cor">
-                <div class="bola-ok"></div>
-            </div>
-            <div class="price1">
-                <div class="bola-ok"></div>
-            </div>
-        </div>
+
+
         
     </div>
     <footer>
@@ -131,4 +168,5 @@
     </footer>
 
 </body>
+<script src="./javascript/js.js"></script>
 </html>
