--- a/price-grid/index.html
+++ b/price-grid/index.html
@@ -17,49 +17,42 @@
             <div class="container_caixa_bottom1">
                 <div class="description">
                     <div class="bola">01</div>
-                    <div class="text">
-                        LOREM IPSUM DOLOR SIT AMET</div>
+                    <div class="text">LOREM IPSUM DOLOR SIT AMET</div>
                 </div>
                 <div class="description">
                     <div class="description">
                         <div class="bola">02</div>
-                        <div class="text">
-                            CONSECTETUR ADIPISCING ELIT</div>
+                        <div class="text">CONSECTETUR ADIPISCING ELIT</div>
                     </div>
                 </div>
                 <div class="description">
                     <div class="description">
                         <div class="bola">03</div>
-                        <div class="text">
-                            SEM DONEC VARIUS CLASS</div>
+                        <div class="text">SEM DONEC VARIUS CLASS</div>
                     </div>
                 </div>
                 <div class="description">
                     <div class="description">
                         <div class="bola">04</div>
-                        <div class="text">
-                            LOREM IPSUM DOLOR SIT AMET</div>
+                        <div class="text">LOREM IPSUM DOLOR SIT AMET</div>
                     </div>
                 </div>
                 <div class="description">
                     <div class="description">
                         <div class="bola">05</div>
-                        <div class="text">
-                            FERMENTUM LITORA</div>
+                        <div class="text">FERMENTUM LITORA</div>
                     </div>
                 </div>
                 <div class="description">
                     <div class="description">
                         <div class="bola">06</div>
-                        <div class="text">
-                            JUSTO NASCETUR URNA SAGITTIS</div>
+                        <div class="text">JUSTO NASCETUR URNA SAGITTIS</div>
                     </div>
                 </div>
                 <div class="description">
                     <div class="description">
                         <div class="bola">07</div>
-                        <div class="text">
-                            DIGNISSIM VITAE, CONUBIA.</div>
+                        <div class="text">DIGNISSIM VITAE, CONUBIA.</div>
                     </div>
                 </div>
             </div>
@@ -67,6 +60,7 @@
 
         <div class="c-hidden">
             <div class="sombra-l"></div>
+
             <div class="content">
                 <div class="container_caixa_top2">
                     <div class="bandeira">STANDARD</div>
@@ -75,6 +69,7 @@
                         <div class="valor_description">The standard chunk</div>
                     </div>
                 </div>
+
                 <div class="container_caixa_top3">
                     <div class="bandeira">PROFESSIONAL</div>
                     <div class="preco">
@@ -82,19 +77,24 @@
                         <div class="valor_description">Various versions have evolved</div>
                     </div>
                 </div>
+
                 <div class="container_caixa_top4">
                     <div class="bandeira">EXTENDED</div>
                     <div class="preco">
                         <div class="valor">$100</div>
                         <div class="valor_description">Contrary to popular belief</div>
                     </div>
-                </div>       <div class="container_caixa_top2">
+
+                </div>
+
+                <div class="container_caixa_top2">
                     <div class="bandeira">STANDARD</div>
                     <div class="preco">
                         <div class="valor">$20</div>
                         <div class="valor_description">The standard chunk</div>
                     </div>
                 </div>
+
                 <div class="container_caixa_top3">
                     <div class="bandeira">PROFESSIONAL</div>
                     <div class="preco">
@@ -102,6 +102,7 @@
                         <div class="valor_description">Various versions have evolved</div>
                     </div>
                 </div>
+
                 <div class="container_caixa_top4">
                     <div class="bandeira">EXTENDED</div>
                     <div class="preco">
@@ -109,6 +110,7 @@
                         <div class="valor_description">Contrary to popular belief</div>
                     </div>
                 </div>
+
                 <div class="container_caixa_bottom2">
                     <div class="price1">1 mês</div>
                     <div class="price1-cor" style="color: rgb(97, 39, 179);">10GB</div>
@@ -120,6 +122,7 @@
                     <div class="price1-cor" style="color: rgba(97, 39, 179, 0.363);">X</div>
                     <div class="price1" style="color: rgba(97, 39, 179, 0.363);">X</div>
                 </div>
+
                 <div class="container_caixa_bottom3">
                     <div class="price1">3 meses</div>
                     <div class="price1-cor" style="color: rgb(32 143 228);">50GB</div>
@@ -133,6 +136,7 @@
                     <div class="price1-cor" style="color: rgba(97, 39, 179, 0.363);">X</div>
                     <div class="price1" style="color: rgba(97, 39, 179, 0.363);">X</div>
                 </div>
+                
                 <div class="container_caixa_bottom4">
                     <div class="price1">1 ano</div>
                     <div class="price1-cor" style="color: rgb(239 85 97);">200gb</div>
