--- a/Aleksei_portfolio/index.html
+++ b/Aleksei_portfolio/index.html
@@ -91,37 +91,47 @@
                 <h1 class="subtitulo sub2">Linguagens</h1>
                 <div class="container-linguagens">
                     <div class="linguagem" id="js">
-                        <i class="fa-brands fa-js"></i>
-                        <p class="linguagens-nome">Javascript</p>
-                        <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur earum doloribus ab neque minus.</p>
+                        <img class="cards" src="./img/card-js.jpg" alt="">
+                        
+                        <div class="container-descricao-linguagem">
+                            <p class="linguagens-nome">Javascript</p>
+                            <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        </div>
                     </div>
                     <div class="linguagem" id="html">
-                        <i class="fa-brands fa-html5"></i>
-                        <p class="linguagens-nome">Html</p>
-                        <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur earum doloribus ab neque minus.</p>
+                        <img class="cards" src="./img/card-html-css.jpg" alt="">
+                        <div class="container-descricao-linguagem">
+                            <p class="linguagens-nome">Html/Css</p>
+                            <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        </div>
                     </div>
                     <div class="linguagem" id="css">
-                        <i class="fa-brands fa-css3-alt"></i>
-                        <p class="linguagens-nome">Css</p>
-                        <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur earum doloribus ab neque minus.</p>
+                        <img class="cards" src="./img/card-design.jpg" alt="">
+                        <div class="container-descricao-linguagem">
+                            <p class="linguagens-nome">Corel/Photshop</p>
+                            <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        </div>
                     </div>
                     <div class="linguagem" id="git">
-                        <div>
-                            <i class="fa-brands fa-git"></i>
-                            <i class="fa-brands fa-github"></i>
+                        <img class="cards" src="./img/card-git.jpg" alt="">
+                        <div class="container-descricao-linguagem">
+                            <p class="linguagens-nome">Git/Github</p>
+                            <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         </div>
-                        <p class="linguagens-nome">Git/Github</p>
-                        <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur earum doloribus ab neque minus.</p>
                     </div>
                     <div class="linguagem" id="photoshop">
-                        <i class="fa-solid fa-paintbrush"></i>
-                        <p class="linguagens-nome">Photoshop/Corel</p>
-                        <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur earum doloribus ab neque minus.</p>
+                        <img class="cards" src="./img/card-api.jpg" alt="">
+                        <div class="container-descricao-linguagem">
+                            <p class="linguagens-nome">Api</p>
+                            <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        </div>
                     </div>
                     <div class="linguagem" id="apis">
-                        <i class="fa-solid fa-code-fork"></i>
-                        <p class="linguagens-nome">Apis</p>
-                        <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur earum doloribus ab neque minus.</p>
+                        <img class="cards" src="./img/card-progresso.jpg" alt="">
+                        <div class="container-descricao-linguagem">
+                            <p class="linguagens-nome">Em desenvolvimento...</p>
+                            <p class="linguagens-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -130,7 +140,7 @@
         <div class="projetos">
 
             <div class="projetos-subtitulo">
-                <h1 class="subtitulo sub3">Linguagens</h1>
+                <h1 class="subtitulo sub3">Projetos</h1>
                 <div class="subtitulo-btn">Mostrar tudo</div>
             </div>
 
