--- a/Aleksei_portfolio/index.html
+++ b/Aleksei_portfolio/index.html
@@ -137,6 +137,16 @@
             </div>
         </div>
 
+        <div class="content-slide">
+            <div class="slide-flex">
+                <div class="projeto s1"><img src="./img/foto-projeto.jpg" alt=""></div>
+                <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
+                <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
+                <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
+                <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
+            </div>
+        </div>
+
         <div class="projetos">
 
             <div class="projetos-subtitulo">
@@ -144,20 +154,15 @@
                 <div class="subtitulo-btn">Mostrar tudo</div>
             </div>
 
-            <div class="projetos-hidden-slide">
-                <div class="content-slide">
-                    <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
-                    <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
-                    <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
-                    <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
-                    <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
+                <div class="projetos-hidden-slide">
+
                 </div>
+
+                <!--<i class="fa-solid fa-arrow-left-long"></i>
+                <i class="fa-solid fa-arrow-right-long"></i>-->
             </div>
 
-            <div class="slide-setas">
-                <i class="fa-solid fa-arrow-left-long"></i>
-                <i class="fa-solid fa-arrow-right-long"></i>
-            </div>
+            
         </div>
 
     </main>
