--- a/Aleksei_portfolio/index.html
+++ b/Aleksei_portfolio/index.html
@@ -137,7 +137,7 @@
             </div>
         </div>
 
-        <div class="content-slide">
+        <!--<div class="content-slide">
             <div class="slide-flex">
                 <div class="projeto s1"><img src="./img/foto-projeto.jpg" alt=""></div>
                 <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
@@ -145,11 +145,34 @@
                 <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
                 <div class="projeto"><img src="./img/foto-projeto.jpg" alt=""></div>
             </div>
+        </div>-->
+
+        <div class="container-projetos">
+            <div class="projetos">
+                <i class="fa-solid fa-caret-left"></i>
+                <div class="content-slide-hidden">
+                    <div class="slide">
+                        <div class="gradient-border" id="box">
+                            <img class="cards-projeto" src="./img/projeto-calc.jpg" alt="link e imagem de uma calculadora feita em Javascript">
+                            <div class="projeto-descricao">
+                                <div class="nome-projeto"></div>
+                            </div>
+                        </div>
+
+                        <div class="gradient-border" id="box">
+                            <img class="cards-projeto" src="./img/projeto-landing-page.jpg" alt="link e imagem de uma landingpage de realidade virtual">
+                        </div>
+
+                        <div class="gradient-border" id="box">
+                            <img class="cards-projeto" src="./img/projeto-price-grid.jpg" alt="link e imagem de uma ">
+                        </div>
+                    </div>
+                </div>
+                <i class="fa-solid fa-caret-right"></i>
+            </div>
         </div>
 
-        <div class="projetos">
-
-            <div class="projetos-subtitulo">
+                    <!-- Isso é da classe projeto<div class="projetos-subtitulo">
                 <h1 class="subtitulo sub3">Projetos</h1>
                 <div class="subtitulo-btn">Mostrar tudo</div>
             </div>
@@ -158,13 +181,9 @@
 
                 </div>
 
-                <!--<i class="fa-solid fa-arrow-left-long"></i>
-                <i class="fa-solid fa-arrow-right-long"></i>-->
-            </div>
-
-            
-        </div>
-
+                <i class="fa-solid fa-arrow-left-long"></i>
+                <i class="fa-solid fa-arrow-right-long"></i>
+            </div>-->
     </main>
 
     <footer>
@@ -183,6 +202,7 @@
                 </div>
             </div>
         </div>
+
     </footer>
 </body>
 </html>
